# Distcomp

251001/: Zhidkov
251001/Churavskiy/lab4/: pom.xml
251001/Churavskiy/lab5/: pom.xml
251001/Kulchinskiy/: Dockerfile  docker-compose.yaml  manage.py  pyproject.toml
251001/Kulchinskiy/discussion/: apps.py  helpers.py  models.py  serializers.py  urls.py  views.py
251001/Kulchinskiy/discussion/migrations/: 0001_initial.py
251001/Kulchinskiy/labs_distributed_computing/: asgi.py  db_routers.py  settings.py  urls.py  wsgi.py
251001/Kulchinskiy/publisher/: apps.py  models.py  routers.py  serializers.py  urls.py  views.py
251001/Kulchinskiy/publisher/migrations/: 0001_initial.py  0002_alter_comment_table_alter_creator_table_and_more.py  0003_news_marks_alter_creator_login_alter_mark_name_and_more.py  0004_remove_news_marks.py  0005_delete_comment.py
251002/Skokov/laba2/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
251002/Skokov/laba2/api_v1/: __init__.py
251002/Skokov/laba2/api_v1/reactions/: crud.py  helper.py  schemas.py  views.py
251002/Skokov/laba2/api_v1/stickers/: crud.py  views.py
251002/Skokov/laba2/api_v1/stories/: crud.py  helpers.py  schemas.py  views.py
251002/Skokov/laba2/api_v1/writers/: crud.py  helpers.py  schemas.py  views.py
251002/Skokov/laba2/models/: __init__.py  many_to_many.py  reactions.py  story.py  writer.py
251003/Ivannikova/: README.md
251003/Kovalevich/: README.md
251003/Stelmakh/: docker-compose.yaml
251004/Snopko/: pom.xml
251031/project 3/: alembic.ini  docker-compose.yml  pytest.ini  requirements.txt
(+1536 files in other folders)
